create our repository generic, upgrade controllers, implement our base entity and improvements in our database

--- a/API/Dao/Dao.csproj
+++ b/API/Dao/Dao.csproj
@@ -22,4 +22,9 @@
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\Category\" />
+    <Folder Include="Repositories\Products\" />
+  </ItemGroup>
+
 </Project>
