--- a/API/API/appsettings.json
+++ b/API/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;DataBase=apidb;Uid=root;Pwd=4554"
+    "DefaultConnection": "Server=localhost;DataBase=apidb;Uid=root;Pwd=4554;SSL Mode=None"
   },
   "Logging": {
     "LogLevel": {
