implementando jwt token

--- a/API/API/API.csproj
+++ b/API/API/API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>7b85c791-b1fc-49ef-8a59-4d8d7a03a77e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
