--- a/API/API/appsettings.json
+++ b/API/API/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValudAudience": "http://localhost:7066",
+    "ValidIssuer": "http://localhost:5066",
+    "SecretKey": "AdminTokenPassword@4554650",
+    "TokenValidityInMinuties": 30,
+    "RefreshTokenValidityInMinuties":  60
+  }
 }
