--- a/API/API/appsettings.Development.json
+++ b/API/API/appsettings.Development.json
@@ -4,5 +4,19 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "http://localhost:60050",
+          "https://localhost:44395",
+          "http://localhost:5000",
+          "https://localhost:7018",
+          "http://localhost:5222"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      }
+    }
   }
 }
